--- a/src/styles/_borders.scss
+++ b/src/styles/_borders.scss
@@ -4,5 +4,7 @@ $black: 3px solid black;
 $blue: 3px solid colors.$blue;
 $active: 3px solid colors.$active;
 $green: 3px solid colors.$green;
+$disabled: 3px solid colors.$disabled;
+$subtle: 3px solid colors.$subtle;
 $white: 3px solid white;
 $blank: 3px solid transparent;
