--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -13,5 +13,7 @@ $brown: #9C9848;
 $green: #4F9C8A;
 $green-lighter: lighten($green, 30%);
 $green-darker: darken($green, 10%);
+$subtle: #EEE;
+$disabled: #AAA;
 
 $text: #333;
